实现模糊搜索接口
