# citicup-admin/internal/web/company.go
@@ -13,12 +13,12 @@ import (
 // @Description Get All Companies.
 // @Accept  json
 // @Produce  json
-// @Param pageSize query string true "页大小"
-// @Param pageNum query string true "页号"
+// @Param pageSize query int true "页大小"
+// @Param pageNum query int true "页号"
 // @Success 200 {object} model.Companies
 // @Failure 404 {string} string "Resource not found"
 // @Failure 500 {string} string "Internal Error"
-// @Router /api/companies [get]
+// @Router /api/companies/list [get]
 func GetCompanies(c *gin.Context) {
 	var (
 		appG = Gin{C: c}
@@ -35,18 +35,45 @@ func GetCompanies(c *gin.Context) {
 }
 
 // @Tags Company
-// @Summary 根据Id获取公司信息
+// @Summary 模糊搜索公司
 // @Accept  json
 // @Produce  json
-// @Param id path string true "公司id"
+// @Param key query string true "关键字，按照关键字搜索名称"
+// @Param pageSize query int true "页大小"
+// @Param pageNum query int true "页号"
 // @Success 200 {object} model.Company
 // @Failure 404 {string} string "Resource not found"
 // @Failure 500 {string} string "Internal Error"
-// @Router /api/companies/{id} [get]
+// @Router /api/companies/query [get]
+func QueryCompanies(c *gin.Context) {
+	var (
+		appG = Gin{C: c}
+	)
+
+	pageSize, _ := strconv.Atoi(c.Query("pageSize"))
+	pageNum, _ := strconv.Atoi(c.Query("pageNum"))
+	key := c.Query("key")
+	list, err := serv.QueryCompanies(c, key, pageNum, pageSize)
+	if err != nil {
+		appG.Response(http.StatusInternalServerError, e.INTERNAL_ERROR, nil)
+		return
+	}
+	appG.OK(list)
+}
+
+// @Tags Company
+// @Summary 根据Id获取公司信息
+// @Accept  json
+// @Produce  json
+// @Param id query string true "公司id"
+// @Success 200 {object} model.Company
+// @Failure 404 {string} string "Resource not found"
+// @Failure 500 {string} string "Internal Error"
+// @Router /api/companies [get]
 func GetCompanyById(c *gin.Context) {
 	var (
 		appG = Gin{C: c}
-		id   = c.Param("id") //Path  :id
+		id   = c.Query("id") //Path  :id
 	)
 	i, _ := strconv.Atoi(id)
 	company, err := serv.GetCompanyById(c, uint(i))
@@ -90,16 +117,16 @@ func UpdateCompany(c *gin.Context) {
 // @Tags Company
 // @Summary 删除指定公司信息
 // @Description Delete company
-// @Param id path string true "公司id"
+// @Param id query string true "公司id"
 // @Accept  json
 // @Success 200
 // @Failure 404 {string} string "Resource not found"
 // @Failure 500 {string} string "Internal Error"
-// @Router /api/companies/{id} [DELETE]
+// @Router /api/companies [DELETE]
 func DeleteCompanyById(c *gin.Context) {
 	var (
 		appG = Gin{C: c}
-		id   = c.Param("id") //Path  :id
+		id   = c.Query("id") //Path  :id
 	)
 	i, _ := strconv.Atoi(id)
 	err := serv.DeleteCompany(c, uint(i))
